@@ -128,3 +128,4 @@ Digging book shelves probably doesn't work correctly.
 It seems that due to certain bitshift rounding errors, resting causes more exp minus than pressing the NOP key.
 Can angry Atavus or Cruentus destroy a quest artifact inside a container?
 Items left on shop floor do not spoil even if the shopkeeper is dead.
+"A wolf looks much healthier" (weird bug, can't really trace how this happened, but it did)
