@@ -1,5 +1,11 @@
 December 06 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>
 
+	* Slightly adjusted helmets in favor of "normal" helmets. (it was far too easy to find special helmets and the normal ones were not really needed by player at any point of the game)
+	* Monsters in panic don't follow player from levels
+	* Vesana now leaves a 3 pineapples on the ground when it is killed
+
+December 06 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>
+
 	* I mixed to gods in last entry, so now that is fixed...
 	* Cleptia now gives invisibility state if haste is already activated. If even invisibility is active, then it adds time to one of the activated states. 
 
